styles/style.css
.wrapper {
  display: flex;
  flex-wrap: wrap;
  padding: 0em 2em;
  max-width: 864px;
  margin: 0 auto;
  width: 100%
}

.section {
  align-items: center;
  justify-content: center;
  margin: 1em auto;
}

body {
  background: black;
  color: white;
  font-family: arial; 
  font-size: 100%;
}

p {
  color: white; 
}

.horizontal-rule {
  display: block;
  width: 100%;
  background: white;
  border: 1px solid white;
}

#blog-header { 
  font-size: 1.8em;
  margin: 0.1em 0;
}

#highlights-panel {
  font-weight: 1000;
  font-size: 0.8em;
}

.title-text {
  color: white;
  text-align: left;
  margin: 0;
  line-height: 1.1;
  font-weight: 900;
}

.nav-bar {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-list {
  display: none;
}

.nav-link {
  color: white;
  font-weight: bold;
  text-decoration: none;
  transition: color .3s ease;
  position: relative; 
}

.nav-link:after {
  content: '';
  position: absolute;
  width: 0; height: 3px;
  display: block;
  margin-top: 5px;
  right: 0;
  background: #fff;
  transition: width .2s ease;
  -webkit-transition: width .2s ease;
}

.nav-link:hover:after {
  width: 100%;
  left: 0;
  background: #fff;
}

.post-preview {
  margin: 1.5em 0;
}

.post-date {
  color: #AAA;
  font-size: 1em;
  margin: 0;
}

.post-title {
  margin: 0;
  font-size: 1.2em;
}

#info-block {
  margin: 3em 0;
}

#summary-panel > h2 {
  margin: 0;
  font-size: 1.1em;
}

#summary-panel {
  margin-top: 2em;
}

.logo {
  font-size: 2em;
  font-weight: 600;
}

.menu-btn > img {
  width: 2.5em;
}

.close-btn > img {
  width: 2.5em;
}

#overlay-nav {
  height: 0%;
  width: 100%;
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: rgb(0,0,0); /* Black fallback color */
  background-color: rgba(0,0,0, 0.95); /* Black w/opacity */
  transition: 0.5s;
}

#overlay-nav > .close-btn {
  position: absolute;
  top: 2.5em;
  right: 1em;
  margin: 1em;
}

.nav-menu {
  position: relative;
  padding: 0;
  top: 20%;
}

.nav-menu > li {
  list-style: none;
  margin-top: 2em;
  text-align: center;
}

.nav-menu .nav-link {
  font-size: 2em;
}

/* Tablet Styles */
@media only screen and (min-width: 768px) and (max-width: 960px), (orientation: landscape) {
  .nav-list {
    display: inline;
  }

  .nav-list li {
    display: inline;
    padding: 0 1em;
  }

  #highlights-panel {
    font-size: 1.2em;
  }

  #info-panel {
    font-size: 1.2em;
  }

  #summary-panel {
    margin-top: 0;
  }

  #summary-panel > h2 {
    font-size: 1.4em;
  }

  .menu-btn {
    display: none;
  }
}

/* Desktop Styles */
@media only screen and (min-width: 961px) {
  .post-preview {
    display: flex;
    margin: 1em 0em;
  }

  .post-date {
    order: -1;
    margin-right: 1em;
    font-size: 1.2em;
  }

  #highlights-panel {
    font-size: 1.2em;
    width: 50%;
  }

  #summary-panel {
    width: 50%;
  }

  #info-block {
    display: flex;
  }

  .page {
    padding: 2em 4em;
    display: flex;
    justify-content: space-around;
    align-items: center;
  }

  .nav-bar {
    padding: 1em 0;
  }
}

